gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -3545,7 +3545,7 @@ void AsyncPanZoomController::AdjustScrollForSurfaceShift(
   FrameMetrics::KeepLayoutViewportEnclosingVisualViewport(
       CSSRect(mCompositedScrollOffset,
               Metrics().CalculateCompositedSizeInCssPixels()),
-      mCompositedLayoutViewport);
+      Metrics().GetScrollableRect(), mCompositedLayoutViewport);
   RequestContentRepaint();
   UpdateSharedCompositorFrameMetrics();
 }
